Fixed z-index for lightbox

--- a/assets/css/components/_photos.scss
+++ b/assets/css/components/_photos.scss
@@ -51,7 +51,7 @@
             padding-right: $site-gutter-small;
 
             background-color: rgba(white, 0.94);
-            z-index: 1;
+            z-index: 2;
 
             &:target {
                 display: flex;
@@ -64,6 +64,7 @@
                 max-width: 100%;
                 max-height: 75vh;
                 object-fit: contain;
+                z-index: 3;
             }
         }
     }
@@ -76,6 +77,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 998;
+    z-index: 1;
     cursor: url(/images/icons/x-cursor.png), pointer;
 }
